<resources>
    <string name="app_name">PetMath</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio" />
    <string name="mates" />
    <string name="tienda" />
    <string name="todo">TODO</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="todo1">TODO</string>
    <string name="iniciopag">Inicio</string>
    <string name="tiendapag">tiendapag</string>
    <string name="matespag">matespag</string>
    <string name="_0">0</string>
    <string name="nvl">NVL:</string>
    <string name="cero">0</string>
    <string name="_02">0</string>
    <string name="_04">0</string>
    <string name="todok">TODO</string>
    <string name="todol">TODO</string>
    <string name="todoi">TODO</string>
</resources>